--- a/css/index.css
+++ b/css/index.css
@@ -1,89 +1,58 @@
-body{	
+body{
+  margin:0;
+  padding:0;
+}
+.item {
+   height: 100vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color:rgba(0,0,0,.9);
+   
+}
+
+.carousel-inner{
 	margin:0;
 	padding:0;
-	background-color:white;
-	}
-	.loginform{
-		width:320px;
-		height:420px;
-		background-color:rgba(255,0,255,.1);
-		
-		top:49%;
-		left:50%;
-		position:absolute;
-		transform:translate(-50%,-50%);
-		box-sizing:border-box;
-		padding:40px 30px;
-	}
-	
-	h1{
-		text-align:center;
-		font-size:22px;
-		padding:0 0 20px;
-		margin:0;
-	}
-	.loginform p{
-		margin:0;
-		padding:0;
-		font-weight:bolder;
-	}
-	.loginform input{
-		width:100%;
-		margin-bottom:20px;
-	}
-	.loginform input[type="text"], input[type="password"]{
-		border:none;
-		border-bottom:2px solid white;
-		background:transparent;
-		outline:none;
-		height:40px;
-		color:white;
-		font-size:25px;
-	}
-	.loginform input[type="submit"]{
-		outline:none;
-		border:none;
-		background-color:rgb(0,0,0,.9);
-		height:30px;
-		color:white;
-		border-radius:20px;
-	}
-	.loginform input[type="submit"]:hover{
-		cursor:pointer;
-		color:rgba(0,4,7,.3);
-		background:rgba(102,0,200,.5);
-		font-weight:bolder;
-		font-size:20px; 
-	}
-	.loginform a{
-		line-height:30px;
-	}
-	
-	#tophead{
-		background-image:linear-gradient(rgba(0,235,0,.1),rgba(0,123,0,.1));
-		height:80px;
-		margin:0;
-		padding:0;
-		align-content:center;
-	}
-	#tophead img{
-		max-width:220px;
-		margin:auto;
-		padding:0;
-		background-size:cover;
+}
+hr .hr1{
+	border:1px solid red;
 
+}
+.imgbd{
+	border-radius:10px solid lavender;
+}
+.carousel-caption{
+	top:25%;
+	padding:10px;
+
+}
+.carousel-caption h1{
+   font-size:100px;
+   font-weight:bold;
+}
+.carousel-caption p{
+     margin-right: -388p
+}
+.carouselheader{
+	color:orange;
+	 font-weight:bold;
+}
 
 	}
-	
-	media(max-width: 1500px){
-        #tophead img{
-        	background-size:cover;
-        	width:50%;
-        }
-        #tophead{
-            
-        }
-	}
-	#signupbtn{
-		margin-right:10px;
-	}
+	.carousel-caption p{
+     
+}
+.carousel-caption h1{
+      font-size:80px;
+}
+}
+
+
+
+
+
+
